Add missing charachter
- spelling corrections

--- a/submit/index.html
+++ b/submit/index.html
@@ -848,7 +848,7 @@
           <a href="#toc3"> 3. Related Work</a>
           <ul>
             <li>
-              <a href="#toc3.1">3.1 Transfomers</a>
+              <a href="#toc3.1">3.1 Transformers</a>
             </li>
           </ul>
         </li>
@@ -903,7 +903,7 @@
         CTA can also assign data types to columns such as String, Integer, and Boolean. While data types provide 
         basic information about the type of data stored in a column, entity types capture domain-specific semantics that 
         convey more meaning.  For instance, labeling a column with <b>"hotel/name"</b> rather than 
-        just <b>"String" </b> rovides valuable information about the specific type of data stored in that column, which is crucial for 
+        just <b>"String" </b> provides valuable information about the specific type of data stored in that column, which is crucial for 
         downstream tasks such as data analysis and retrieval. Therefore, it can be argued that entity types 
         assigned through CTA are more useful than data types alone. [<a href="#toc8">1</a>,  <a href="#toc14">4</a>]
       
@@ -996,7 +996,7 @@
 
         Transformers are a type of neural network architecture that has become widely used in natural language 
         processing and other machine learning applications. They were first introduced in 2017 by Vaswani et al [<a href="#toc15">5</a>]. and
-        have since become one of the most popular ddeep-learning models. Transformers are based on the concept of
+        have since become one of the most popular deep-learning models. Transformers are based on the concept of
         self-attention, which allows the model to focus on different parts of the input sequence at each step. 
       </p>
       <p>
