--- a/submit/index.html
+++ b/submit/index.html
@@ -1253,7 +1253,7 @@
       <span id="toc6.2"></span>
       <h3>6.2 Error Analysis</h3>
       <p>
-        To evaluate the performance of each model and assess their strengths and weaknesses, 
+        To evaluate the performance of our best result from neighbor serialization with a window size of 2, 
         we initially conducted statistic analysis on three different aspects: (i) schema type, (ii) data type, and (iii) specific challenges.
         The specific challgenges include: Missing Values, Value Format Heterogeneity, Corner Cases, 
         and Random Columns which were all clearly defined in <a href="https://webdatacommons.org/structureddata/sotab/"
@@ -1272,8 +1272,7 @@
       <p>
         Following the statistical analysis of our results, 
         we delved deeper into the data itself to investigate the root causes of the errors. 
-        We took the data on the best result obtained from neighbor
-        serialization with a window size of 2. To do this, we sampled errors in
+        To do this, we sampled errors in
         prediction by schema for both the CTA and CPA tasks. Specifically, we
         sampled 614 errors from a total of 1533 observations for CTA, and 617
         errors from 3853 observations for CPA. We manually checked these tables
